[Refactor] : getBridgeUpMap, getBridgeDownMap 메서드 -> getBridgeUp 메서드로 병합